test fix - scroll translateY height changes based on mobile vs desktop (as they have different heights)

--- a/main.css
+++ b/main.css
@@ -225,11 +225,19 @@ main {
     } 
   }
 }
-
-@keyframes scrolldown {
-  0%{transform: translateY(0);}
-  20%{transform: translateY(200px);}
-  100%{transform: translateY(2000px); display: none; visibility: hidden;}
+@media screen and (max-width: 850px){
+  @keyframes scrolldown {
+    0%{transform: translateY(0);}
+    20%{transform: translateY(400px);}
+    100%{transform: translateY(3500px); display: none; visibility: hidden;}
+  }
+}
+@media screen and (min-width: 850px){
+  @keyframes scrolldown {
+    0%{transform: translateY(0);}
+    20%{transform: translateY(500px);}
+    100%{transform: translateY(4500px); display: none; visibility: hidden;}
+  }
 }
 /*
 :root * {
